Add phatom wallet connect

--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,13 @@
 .read-the-docs {
   color: #888;
 }
+
+a {
+  color: white;
+}
+.twitter-link {
+  color: "white";
+  font-size: "16px";
+  margin-top: "15px";
+  margin-bottom: "15px";
+}
